# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["BoKang Yang <yangbokang1019@gmail.com>"]
edition = "2021"

# DON'T EDIT THIS!
#
# Codecrafters relies on this file being intact to run tests successfully. Any changes
# here will not reflect when CodeCrafters tests your code, and might even cause build
# failures.
#
# DON'T EDIT THIS!
[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
atoi = "0.4.0"                                      # convert string to integer
async-trait = "0.1"                                 # async trait
clap = { version = "3.0", features = ["derive"] }   # command line argument parsing
rand = "0.8.4"                                      # random number generation
lzf = "1.0.0"                                       # lzf compression
crc64fast = "1.1.0"                                 # crc64 checksum